--- a/src/app/user-settings-form/user-settings-form.component.html
+++ b/src/app/user-settings-form/user-settings-form.component.html
@@ -1,4 +1,54 @@
-<form>
-  <input placeholder="Name">
-  <button class="btn btn-primary">Ok</button>
-</form>
+<div class="container">
+	<h2> User Settings</h2>
+	<form>
+		<div class="form-group">
+			<label for="name">Name</label>
+			<input id="name" name="name" class="form-control"/>
+    </div>
+
+			<div class="form-check">
+				<input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+				<label class="form-check-label" for="defaultCheck1">
+    Email Special Offers
+  </label>
+			</div>
+
+      <br>
+
+			<p>User Interface Styles</p>
+			<div class="form-check">
+				<input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
+				<label class="form-check-label" for="exampleRadios1">
+    Light
+  </label>
+			</div>
+			<div class="form-check">
+				<input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
+				<label class="form-check-label" for="exampleRadios1">
+    Medium
+  </label>
+			</div>
+			<div class="form-check">
+				<input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
+				<label class="form-check-label" for="exampleRadios1">
+    Dark
+  </label>
+			</div>
+      <br>
+			<div class="form-group">
+				<label for="exampleFormControlSelect1">Subscription</label>
+				<select class="form-control" id="exampleFormControlSelect1">
+      <option>Monthly</option>
+      <option>Annual</option>
+      <option>Lifetime</option>
+    </select>
+			</div>
+
+      <div class="form-group">
+    <label for="exampleFormControlTextarea1">Notes</label>
+    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+  </div>
+
+			<button class="btn btn-primary">Send</button>
+	</form>
+</div>
