--- a/src/app/user-settings-form/user-settings-form.component.html
+++ b/src/app/user-settings-form/user-settings-form.component.html
@@ -1,13 +1,24 @@
 <div class="container">
 	<h2> User Settings</h2>
-	<form #form="ngForm">
+	<form #form="ngForm" ngSubmit="onSubmit(form)">
+
 		<div class="form-group">
 			<label for="name">Name</label>
-			<input id="name" name="name" class="form-control" [(ngModel)]="userSettings.name"/>
+			<input id="name" name="name" class="form-control" [(ngModel)]="userSettings.name" required #nameField="ngModel" [class.field-error]="form.submitted && nameField.invalid">
+    <div class="alert alert-danger" [hidden]="nameField.valid || form.submitted">
+      Enter a name
     </div>
+		</div>
+
+    <!-- <h3>Dirty: {{ propertyTest.dirty }}</h3>
+    <h3>Pristine: {{ propertyTest.pristine }}</h3>
+    <h3>Touched: {{ propertyTest.touched }}</h3>
+    <h3>Untouched: {{ propertyTest.untouched }}</h3>
+    <h3>Valid: {{ propertyTest.valid }}</h3>
+    <h3>Invalid: {{ propertyTest.invalid }}</h3> -->
 
 			<div class="form-check">
-				<input class="form-check-input" type="checkbox" value="" id="defaultCheck1" [(ngModel)]="userSettings.emailOffers"/>
+				<input class="form-check-input" type="checkbox" value="" id="defaultCheck1" name="emailOffers" [(ngModel)]="userSettings.emailOffers"/>
 				<label class="form-check-label" for="defaultCheck1">
     Email Special Offers
   </label>
@@ -17,19 +28,19 @@
 
 			<p>User Interface Styles</p>
 			<div class="form-check">
-				<input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked [(ngModel)]="userSettings.interfaceStyle" />
+				<input class="form-check-input" type="radio" name="interfaceStyle" id="exampleRadios1" value="option1" checked [(ngModel)]="userSettings.interfaceStyle" />
 				<label class="form-check-label" for="exampleRadios1">
     Light
   </label>
 			</div>
 			<div class="form-check">
-				<input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked [(ngModel)]="userSettings.interfaceStyle" />
+				<input class="form-check-input" type="radio" name="interfaceStyle" id="exampleRadios1" value="option1" checked [(ngModel)]="userSettings.interfaceStyle" />
 				<label class="form-check-label" for="exampleRadios1">
     Medium
   </label>
 			</div>
 			<div class="form-check">
-				<input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked [(ngModel)]="userSettings.interfaceStyle" />
+				<input class="form-check-input" type="radio" name="interfaceStyle" id="exampleRadios1" value="option1" checked [(ngModel)]="userSettings.interfaceStyle" />
 				<label class="form-check-label" for="exampleRadios1">
     Dark
   </label>
@@ -37,7 +48,7 @@
 			<br>
 			<div class="form-group">
 				<label for="exampleFormControlSelect1">Subscription</label>
-				<select class="form-control" id="exampleFormControlSelect1" [(ngModel)]="userSettings.subscriptionType" >
+				<select class="form-control" id="exampleFormControlSelect1" [(ngModel)]="userSettings.subscriptionType" name="subscription">
       <option>Monthly</option>
       <option>Annual</option>
       <option>Lifetime</option>
@@ -46,11 +57,11 @@
 
 			<div class="form-group">
 				<label for="exampleFormControlTextarea1">Notes</label>
-				<textarea class="form-control" id="exampleFormControlTextarea1" rows="3" [(ngModel)]="userSettings.notes" ></textarea>
+				<textarea class="form-control" id="exampleFormControlTextarea1" rows="3" [(ngModel)]="userSettings.notes" name="notes"></textarea>
 			</div>
 
 			<button class="btn btn-primary">Send</button>
 	</form>
 </div>
 
-{{ originalUserSettings | json}}
+<h3>{{originalUserSettings | json}}</h3>
